--- a/ziliao.html
+++ b/ziliao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>资料汇总</title>
+    <link href=img/favicon.ico rel="shortcut icon"type=image/x-icon>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
